--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ nav a {
 /* =========================
    RESPONSIVE
 ========================= */
-@media (max-width: 768px) {
+max-width: 768px) {
   .projets-container {
     flex-direction: column;
     align-items: center;
